--- a/wodat/packages.config
+++ b/wodat/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IPAddressRange" version="4.2.0" targetFramework="net47" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net47" />
   <package id="Oracle.ManagedDataAccess" version="21.6.1" targetFramework="net47" />
   <package id="PacketDotNet" version="1.4.0" targetFramework="net47" />
