--- a/wodat/wodat.csproj
+++ b/wodat/wodat.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="Arguments.cs" />
+    <Compile Include="IpRanges.cs" />
     <Compile Include="OracleDatabase.cs" />
     <Compile Include="passGuesser.cs" />
     <Compile Include="mainProgram.cs" />
